--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             <img class="imgLogo" src="images/logot.png" alt="">
 
             <a href="pages/contact.html">
-                <h3>Tienes alguna duda? No dudes es escribirnos!</h3>
+                <h3>Tienes alguna duda? No dudes es escribirnos!!</h3>
             </a>
         </footer>
     </body>
