unido lo de todos

--- a/index.html
+++ b/index.html
@@ -42,24 +42,32 @@
 
         </header>
         <main>
+            <img class="indeximgtop" src="images/indeximgtop.jpg" alt="">
+            <h1 class="h1Imgtop">Mucho mas que un hogar!</h1>
+
             <div class="indexCol1">
-                <h1 class="h1index">Tu proximo hogar esta esperando por ti</h1>
-                <img class="imgindex1" src="images/indeximg3.jpg" alt="">
-                <img class="imgindex1" src="images/indeximg1.jpg" alt="">
+                <div>
+                    <h1 class="h1index">Tu proximo hogar esta esperando por ti</h1>
+                    <p class="pIndexCol1">Inmuebles extraordinarios dirigidos y supervisados por Corredores Públicos matriculados, especializados en la compra y venta de propiedades premium</p>
+                </div>
+                <img class="imgindex1" src="images/indeximg4.jpg" alt="">
+                <img class="imgindex1" src="images/indeximg5.jpg" alt="">
             </div>
 
             <h2 class="h2index">Elecciones sin limites!</h2>
-
-            <div class="indexCol2">
-                <img class="imgindex2" src="images/indeximg3.jpg" alt="">
-                <img class="imgindex2" src="images/indeximg2.jpg" alt="">
-                <img class="imgindex2" src="images/indeximg3.jpg" alt="">
-            </div>
-            
-            <div class="indexCol2">
-            <p>¿Con cuantas personas quieres convivir?</p>
-            <p>¿Que barrio te gusta mas?</p>
-            <p>Descubre las miles de ofertas que tenemos para tí!</p>
+            <p class="pIndexCol2">¿Donde quieres mudarte?</p>
+            <div class="conteiner">
+                <div class="indexCol2">
+                    <img class="imgindex2" src="images/indeximg1.jpg" alt="">
+                    <img class="imgindex2" src="images/indeximg2.jpg" alt="">
+                    <img class="imgindex2" src="images/indeximg3.jpg" alt="">
+                </div>
+                
+                <div class="pIndexCol2">
+                <p>¿Con cuantas personas quieres convivir?</p>
+                <p>¿Que barrio te gusta mas?</p>
+                <p>Descubre las miles de ofertas que tenemos para tí!</p>
+                </div>
             </div>
 
         </main>
