--- a/pages/alquilar.html
+++ b/pages/alquilar.html
@@ -10,7 +10,15 @@
         <meta name="description" content="">
         <title>Alquilar</title>
 
-        <link rel="shortcut icon" href="" type="image/x-icon">
+        <link rel="shortcut icon" href="../images/logot.png" type="image/x-icon">
+
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Bungee&display=swap" rel="stylesheet">
+
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Bungee&display=swap" rel="stylesheet">
 
         <!-- CSS -->
         <link rel="stylesheet" href="../css/maincss.css">
@@ -19,21 +27,70 @@
     <body>
         <header class="header">
             
-            <a href="../index.html">
-                <img class="imgLogo" src="../images/logo.jpg" alt="logoEmpresa">
+            <a href="index.html">
+                <img class="imgLogo" src="../images/logoandnombre.png" alt="logoEmpresa">
             </a>
             
             <nav>
                 <ul class="menu">
-                    <li><a class="menuItems" href="../index.html">Home</a></li>
-                    <li><a class="menuItems" href="quienesSomos.html">Quienes Somos?</a></li>
-                    <li><a class="menuItems" href="alquilar.html">Alquilar</a></li>
-                    <li><a class="menuItems" href="contact.html">Contacto</a></li>
+                    <li><a class="menuItemsblue" href="../index.html">Home</a></li>
+                    <li><a class="menuItemsviolet" href="quienesSomos.html">Quienes Somos?</a></li>
+                    <li><a class="menuItemsviolet" href="alquilar.html">Alquilar</a></li>
+                    <li><a class="menuItemsblue" href="contact.html">Contacto</a></li>
                 </ul>
             </nav>
 
         </header>
         <main>
+
+            <div class="casilla">
+                <img src="../images/alqdorm1.jpg" alt="">
+                <div class="datos">
+                    <h4>$100.000</h4>
+                    <p>calle numero, barrio</p>
+                    <p>Caracteristicas de la habitación: 12m², cama de dos plazas, armario empotrado, escritorio</p>
+                    <p>Caracteristicas del departamento: 1 baño, cocina equipada, wifi y suministros incluidos</p>
+                    <div class="caracteristicas">
+                        <img src="../images/wifiLogo.webp" alt="">
+                    </div>
+                </div>
+            </div>
+            <div class="casilla">
+                <img src="../images/alqdorm1.jpg" alt="">
+                <div class="datos">
+                    <h4>$100.000</h4>
+                    <p>calle numero, barrio</p>
+                    <p>Caracteristicas de la habitación: 12m², cama de dos plazas, armario empotrado, escritorio</p>
+                    <p>Caracteristicas del departamento: 1 baño, cocina equipada, wifi y suministros incluidos</p>
+                    <div class="caracteristicas">
+                        <img src="../images/wifiLogo.webp" alt="">
+                    </div>
+                </div>
+            </div>
+            <div class="casilla">
+                <img src="../images/alqdorm1.jpg" alt="">
+                <div class="datos">
+                    <h4>$100.000</h4>
+                    <p>calle numero, barrio</p>
+                    <p>Caracteristicas de la habitación: 12m², cama de dos plazas, armario empotrado, escritorio</p>
+                    <p>Caracteristicas del departamento: 1 baño, cocina equipada, wifi y suministros incluidos</p>
+                    <div class="caracteristicas">
+                        <img src="../images/wifiLogo.webp" alt="">
+                    </div>
+                </div>
+            </div>
+            <div class="casilla">
+                <img src="../images/alqdorm1.jpg" alt="">
+                <div class="datos">
+                    <h4>$100.000</h4>
+                    <p>calle numero, barrio</p>
+                    <p>Caracteristicas de la habitación: 12m², cama de dos plazas, armario empotrado, escritorio</p>
+                    <p>Caracteristicas del departamento: 1 baño, cocina equipada, wifi y suministros incluidos</p>
+                    <div class="caracteristicas">
+                        <img src="../images/wifiLogo.webp" alt="">
+                    </div>
+                </div>
+            </div>
 
         </main>
         <footer>
