--- a/pages/quienesSomos.html
+++ b/pages/quienesSomos.html
@@ -10,7 +10,15 @@
         <meta name="description" content="">
         <title>Comprar</title>
 
-        <link rel="shortcut icon" href="" type="image/x-icon">
+        <link rel="shortcut icon" href="../images/logot.png" type="image/x-icon">
+
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Bungee&display=swap" rel="stylesheet">
+
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Bungee&display=swap" rel="stylesheet">
 
         <!-- CSS -->
         <link rel="stylesheet" href="../css/maincss.css">
@@ -33,20 +41,25 @@
             </nav>
 
         </header>
-        <main>
-            <h1>Una pagina por estudiantes para estudiantes</h1>
-            <p>ROOMIND, cuenta con una gran variedad de alquileres para sus clientes, preparados para ofrecer la mejor disponibilidad a nuestros jovenes.</p>
-            <p>Ofrecemos habitaciones de todo tamaño para que se ajusten a tu estilo de vida.</p> 
-            <p>Este proyecto surgio gracias a la union y cooperación de estudiantes con el sueño de poder facilitar la vida de otros como nosotros. Abrimos nuestra empresa en 2024.</p> 
-            <img src="../images/indeximg3.jpg" alt="">
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quasi reprehenderit quaerat, minus harum praesentium consectetur iste libero quod, molestias obcaecati velit itaque culpa. Aliquam unde nam optio sit quod sequi. Laborum ad voluptatum impedit iure autem laudantium ex iste molestiae nam fugiat! Corrupti provident eligendi deserunt, dolorem ipsum sunt obcaecati earum reprehenderit labore ad a laborum fuga vero, voluptatum aut. Et dolor natus quod ipsa amet iste cupiditate blanditiis! Repellat delectus iusto non, recusandae ratione deserunt velit ab deleniti id voluptatibus veniam aut iste voluptatum doloribus. Magnam, ipsam dolore, illo illum maxime facilis accusamus, quisquam eos harum dolorum quos! Voluptates?</p>
-            <img src="../images/indeximg3.jpg" alt="">
+        <main class="mainquienes-somos">
+            <h2 class="h2quienes-somos">UNA PAGINA POR ESTUDIANTES PARA ESTUDIANTES</h2>
+            <p>ROOMIND destaca como una empresa líder en el mercado de alquileres, ofreciendo una amplia gama de opciones cuidadosamente seleccionadas para satisfacer las necesidades y preferencias de nuestros valiosos clientes. Nos enorgullece brindar una experiencia incomparable, especialmente diseñada para jóvenes en busca de comodidad, conveniencia y estilo.</p>
+            <p>Desde acogedoras habitaciones individuales hasta espaciosas residencias compartidas, nuestras propiedades están meticulosamente preparadas para adaptarse a diversos estilos de vida. Cada alojamiento refleja nuestro compromiso con la excelencia y la atención al detalle, asegurando que cada cliente encuentre su hogar ideal.</p>  
+            <img class="img1-quienes-somos" src="../images/indeximg3.jpg" alt="">
+            <p>El nacimiento de ROOMIND es el producto de la unión y la colaboración entre jóvenes con una visión audaz y compartida: simplificar y mejorar la búsqueda de alojamiento para otros jóvenes como ellos.</p>
+            <p>En el año 2024, con una mezcla de entusiasmo y determinación, estos emprendedores dieron el paso crucial de fundar la empresa, inaugurando así una nueva era en el ámbito del alquiler de viviendas.</p>
+            <p>Este hito no solo marcó el inicio de una empresa, sino que también simbolizó el inicio de una transformación en la forma en que se percibe y se accede al alojamiento, especialmente para la generación más joven.</p>
+            <img class="img1-quienes-somos" src="../images/indeximg3.jpg" alt="">
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Temporibus dolorem repellat, debitis tempore, quo quaerat veniam vel modi error ex perferendis beatae dolor libero ipsa itaque quam, voluptates sed dolorum! Quis consequuntur hic perferendis a tenetur illum autem unde repellat odit aliquid sequi vitae repudiandae tempora recusandae adipisci, obcaecati nesciunt dolores dolore sint voluptate doloremque aperiam, consectetur dicta. Ut, dicta esse. Dicta reprehenderit vel voluptatum ab, quaerat nesciunt tempora iure? Quae nulla quam adipisci aperiam, quibusdam officiis consectetur. Consequuntur aspernatur vel nobis similique laboriosam exercitationem deleniti ut enim aliquam ducimus, omnis laudantium officia unde nesciunt corporis perferendis fuga a reiciendis?</p>
-            <img src="../images/indeximg3.jpg" alt="">
-            <img src="../images/indeximg3.jpg" alt="">
-            <img src="../images/indeximg3.jpg" alt="">
-            <img src="../images/indeximg3.jpg" alt="">
+            
+            
         </main>
+        <div class="container-img-somos">
+            <img class="img1-somos" src="../images/indeximg3.jpg" alt="">
+            <img class="img2-somos"  src="../images/indeximg3.jpg" alt="">
+            <img class="img3-somos"  src="../images/indeximg3.jpg" alt="">
+            <img class="img4-somos"  src="../images/indeximg3.jpg" alt="">
+        </div>
         <footer class="footer">
             <img class="imgLogo" src="../images/logot.png" alt="">
 
