mejora de alquiler

--- a/pages/alquilar.html
+++ b/pages/alquilar.html
@@ -46,55 +46,91 @@
             <div class="casilla">
                 <img src="../images/alqdorm1.jpg" alt="">
                 <div class="datos">
-                    <h4>$100.000</h4>
-                    <p>calle numero, barrio</p>
-                    <p>Caracteristicas de la habitación: 12m², cama de dos plazas, armario empotrado, escritorio</p>
-                    <p>Caracteristicas del departamento: 1 baño, cocina equipada, wifi y suministros incluidos</p>
+                    <div class="precio">
+                        <h4>$100.000</h4>
+                        <p>expensas incluidas</p>
+                    </div>
+                    <div class="detalles">
+                        <p>Salta 1300, Constitución</p>
+                        <p>Caracteristicas de la habitación: 12m², cama de dos plazas, armario empotrado, escritorio</p>
+                        <p>Caracteristicas del departamento: 1 baño, cocina equipada, wifi y suministros incluidos</p>
+                    </div>
                     <div class="caracteristicas">
-                        <img src="../images/wifiLogo.webp" alt="">
+                        <h5>Contacta con nuestros agentes:</h5>
+                        <a href="https://www.whatsapp.com/"><img src="../images/whatsappLogo.png" alt=""></a>
+                        <a href=""><img src="../images/telefonoLogo.png" alt=""></a>
+                        <a href="https://www.google.com/intl/es-419/gmail/about/"><img src="../images/mensajeLogo.png" alt=""></a>
                     </div>
                 </div>
             </div>
             <div class="casilla">
-                <img src="../images/alqdorm1.jpg" alt="">
+                <img src="../images/alqdorm2.jpg" alt="">
                 <div class="datos">
-                    <h4>$100.000</h4>
-                    <p>calle numero, barrio</p>
-                    <p>Caracteristicas de la habitación: 12m², cama de dos plazas, armario empotrado, escritorio</p>
-                    <p>Caracteristicas del departamento: 1 baño, cocina equipada, wifi y suministros incluidos</p>
+                    <div class="precio">
+                        <h4>$150.000</h4>
+                        <p>+39.000 ARS expensas</p>
+                    </div>
+                    <div class="detalles">
+                        <p>Avenida Rivadavia 6500, Flores, Capital Federal</p>
+                        <p>Caracteristicas de la habitación: 10m², amplios placares, luz natural</p>
+                        <p>Caracteristicas del departamento: Baño completo amplio, patio-lavadero, cochera disponible</p>
+                    </div>
                     <div class="caracteristicas">
-                        <img src="../images/wifiLogo.webp" alt="">
+                        <h5>Contacta con nuestros agentes:</h5>
+                        <a href="https://www.whatsapp.com/"><img src="../images/whatsappLogo.png" alt=""></a>
+                        <a href=""><img src="../images/telefonoLogo.png" alt=""></a>
+                        <a href="https://www.google.com/intl/es-419/gmail/about/"><img src="../images/mensajeLogo.png" alt=""></a>
                     </div>
                 </div>
             </div>
             <div class="casilla">
-                <img src="../images/alqdorm1.jpg" alt="">
+                <img src="../images/alqdorm3.jpg" alt="">
                 <div class="datos">
-                    <h4>$100.000</h4>
-                    <p>calle numero, barrio</p>
-                    <p>Caracteristicas de la habitación: 12m², cama de dos plazas, armario empotrado, escritorio</p>
-                    <p>Caracteristicas del departamento: 1 baño, cocina equipada, wifi y suministros incluidos</p>
+                    <div class="precio">
+                        <h4>$130.000</h4>
+                        <p>+32.000 ARS expensas</p>
+                    </div>
+                    <div class="detalles">
+                        <p>Santos Dumont 4500, Chacarita, Capital Federal</p>
+                        <p>Caracteristicas de la habitación: 8m², cama de dos plazas, armario empotrado, baño propio</p>
+                        <p>Caracteristicas del departamento: 2 baños compartidos, living comedor, cocina integrada</p>
+                    </div>
                     <div class="caracteristicas">
-                        <img src="../images/wifiLogo.webp" alt="">
+                        <h5>Contacta con nuestros agentes:</h5>
+                        <a href="https://www.whatsapp.com/"><img src="../images/whatsappLogo.png" alt=""></a>
+                        <a href=""><img src="../images/telefonoLogo.png" alt=""></a>
+                        <a href="https://www.google.com/intl/es-419/gmail/about/"><img src="../images/mensajeLogo.png" alt=""></a>
                     </div>
                 </div>
             </div>
             <div class="casilla">
-                <img src="../images/alqdorm1.jpg" alt="">
+                <img src="../images/alqdorm4.jpg" alt="">
                 <div class="datos">
-                    <h4>$100.000</h4>
-                    <p>calle numero, barrio</p>
-                    <p>Caracteristicas de la habitación: 12m², cama de dos plazas, armario empotrado, escritorio</p>
-                    <p>Caracteristicas del departamento: 1 baño, cocina equipada, wifi y suministros incluidos</p>
+                    <div class="precio">
+                        <h4>$175.000</h4>
+                        <p>+110.000 ARS expensas</p>
+                    </div>
+                    <div class="detalles">
+                        <p>Avenida Regimiento de Patricios 1000, Barracas, Capital Federal</p>
+                        <p>Caracteristicas de la habitación: 14m², balcón propio, cama de dos plazas</p>
+                        <p>Caracteristicas del departamento: 1 baño completo, suministros incluidos, patio-lavadero</p>
+                    </div>
                     <div class="caracteristicas">
-                        <img src="../images/wifiLogo.webp" alt="">
+                        <h5>Contacta con nuestros agentes:</h5>
+                        <a href="https://www.whatsapp.com/"><img src="../images/whatsappLogo.png" alt=""></a>
+                        <a href=""><img src="../images/telefonoLogo.png" alt=""></a>
+                        <a href="https://www.google.com/intl/es-419/gmail/about/"><img src="../images/mensajeLogo.png" alt=""></a>
                     </div>
                 </div>
             </div>
 
         </main>
-        <footer>
+        <footer class="footerContact">
+            <img class="imgLogo" src="../images/logot.png" alt="">
 
+            <a href="../pages/contact.html">
+                <h3>Tienes alguna duda? No dudes es escribirnos!</h3>
+            </a>
         </footer>
     </body>
 </html>
