--- a/pages/quienesSomos.html
+++ b/pages/quienesSomos.html
@@ -27,7 +27,7 @@
     <body>
         <header class="header">
             
-            <a href="index.html">
+            <a href="../index.html">
                 <img class="imgLogo" src="../images/logoandnombre.png" alt="logoEmpresa">
             </a>
             
