--- a/index.html
+++ b/index.html
@@ -50,17 +50,17 @@
                     <h1 class="h1index">Tu proximo hogar esta esperando por ti</h1>
                     <p class="pIndexCol1">Inmuebles extraordinarios dirigidos y supervisados por Corredores Públicos matriculados, especializados en la compra y venta de propiedades premium</p>
                 </div>
-                <img class="imgindex1" src="images/indeximg4.jpg" alt="">
-                <img class="imgindex1" src="images/indeximg5.jpg" alt="">
+                <img class="imgindex1" src="images/index1.jpg" alt="">
+                <img class="imgindex1" src="images/index4.jpg" alt="">
             </div>
 
             <h2 class="h2index">Elecciones sin limites!</h2>
             <p class="pIndexCol2">¿Donde quieres mudarte?</p>
             <div class="conteiner">
                 <div class="indexCol2">
-                    <img class="imgindex2" src="images/indeximg1.jpg" alt="">
-                    <img class="imgindex2" src="images/indeximg2.jpg" alt="">
-                    <img class="imgindex2" src="images/indeximg3.jpg" alt="">
+                    <img class="imgindex2" src="images/index3.jpg" alt="">
+                    <img class="imgindex2" src="images/index5.jpg" alt="">
+                    <img class="imgindex2" src="images/index2.jpg" alt="">
                 </div>
                 
                 <div class="pIndexCol2">
