--- a/pages/quienesSomos.html
+++ b/pages/quienesSomos.html
@@ -45,20 +45,21 @@
             <h2 class="h2quienes-somos">UNA PAGINA POR ESTUDIANTES PARA ESTUDIANTES</h2>
             <p>ROOMIND destaca como una empresa líder en el mercado de alquileres, ofreciendo una amplia gama de opciones cuidadosamente seleccionadas para satisfacer las necesidades y preferencias de nuestros valiosos clientes. Nos enorgullece brindar una experiencia incomparable, especialmente diseñada para jóvenes en busca de comodidad, conveniencia y estilo.</p>
             <p>Desde acogedoras habitaciones individuales hasta espaciosas residencias compartidas, nuestras propiedades están meticulosamente preparadas para adaptarse a diversos estilos de vida. Cada alojamiento refleja nuestro compromiso con la excelencia y la atención al detalle, asegurando que cada cliente encuentre su hogar ideal.</p>  
-            <img class="img1-quienes-somos" src="../images/indeximg3.jpg" alt="">
+            <img class="img1-quienes-somos" src="../images/qs5.jpg" alt="">
             <p>El nacimiento de ROOMIND es el producto de la unión y la colaboración entre jóvenes con una visión audaz y compartida: simplificar y mejorar la búsqueda de alojamiento para otros jóvenes como ellos.</p>
             <p>En el año 2024, con una mezcla de entusiasmo y determinación, estos emprendedores dieron el paso crucial de fundar la empresa, inaugurando así una nueva era en el ámbito del alquiler de viviendas.</p>
             <p>Este hito no solo marcó el inicio de una empresa, sino que también simbolizó el inicio de una transformación en la forma en que se percibe y se accede al alojamiento, especialmente para la generación más joven.</p>
-            <img class="img1-quienes-somos" src="../images/indeximg3.jpg" alt="">
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Temporibus dolorem repellat, debitis tempore, quo quaerat veniam vel modi error ex perferendis beatae dolor libero ipsa itaque quam, voluptates sed dolorum! Quis consequuntur hic perferendis a tenetur illum autem unde repellat odit aliquid sequi vitae repudiandae tempora recusandae adipisci, obcaecati nesciunt dolores dolore sint voluptate doloremque aperiam, consectetur dicta. Ut, dicta esse. Dicta reprehenderit vel voluptatum ab, quaerat nesciunt tempora iure? Quae nulla quam adipisci aperiam, quibusdam officiis consectetur. Consequuntur aspernatur vel nobis similique laboriosam exercitationem deleniti ut enim aliquam ducimus, omnis laudantium officia unde nesciunt corporis perferendis fuga a reiciendis?</p>
+            <img class="img1-quienes-somos" src="../images/qs6.jpg" alt="">
+            <p>
+                ROOMIND no solo ofrece alojamiento, sino un estilo de vida para jóvenes que buscan comodidad y estilo. Desde acogedoras habitaciones individuales hasta espaciosas residencias compartidas, cada opción refleja nuestro compromiso con la excelencia y la atención al detalle. Fundada en 2024 por emprendedores con visión, ROOMIND marca una nueva era en el alquiler de viviendas. Más que una empresa, es una comunidad que transforma la percepción y el acceso al alojamiento. Con una variedad de opciones cuidadosamente seleccionadas, ROOMIND se enorgullece de brindar una experiencia incomparable, diseñada para satisfacer las necesidades y preferencias de nuestros valiosos clientes jóvenes</p>
             
             
         </main>
         <div class="container-img-somos">
-            <img class="img1-somos" src="../images/indeximg3.jpg" alt="">
-            <img class="img2-somos"  src="../images/indeximg3.jpg" alt="">
-            <img class="img3-somos"  src="../images/indeximg3.jpg" alt="">
-            <img class="img4-somos"  src="../images/indeximg3.jpg" alt="">
+            <img class="img1-somos" src="../images/qs1.jpg" alt="">
+            <img class="img2-somos"  src="../images/qs2.jpg" alt="">
+            <img class="img3-somos"  src="../images/qs3.jpg" alt="">
+            <img class="img4-somos"  src="../images/qs4.jpg" alt="">
         </div>
         <footer class="footer">
             <img class="imgLogo" src="../images/logot.png" alt="">
