--- a/pages/alquilar.html
+++ b/pages/alquilar.html
@@ -44,7 +44,7 @@
         <main>
 
             <div class="casilla">
-                <img src="../images/alqdorm1.jpg" alt="">
+                <img src="../images/alqdorm1.jpg" alt=""> <!--La idea a futuro es hacer un carrousel con distintas imagenes-->
                 <div class="datos">
                     <div class="precio">
                         <h4>$100.000</h4>
@@ -56,7 +56,7 @@
                         <p>Caracteristicas del departamento: 1 baño, cocina equipada, wifi y suministros incluidos</p>
                     </div>
                     <div class="caracteristicas">
-                        <h5>Contacta con nuestros agentes:</h5>
+                        <h5>Contacta con nuestros agentes:</h5> 
                         <a href="https://www.whatsapp.com/"><img src="../images/whatsappLogo.png" alt=""></a>
                         <a href=""><img src="../images/telefonoLogo.png" alt=""></a>
                         <a href="https://www.google.com/intl/es-419/gmail/about/"><img src="../images/mensajeLogo.png" alt=""></a>
@@ -64,7 +64,7 @@
                 </div>
             </div>
             <div class="casilla">
-                <img src="../images/alqdorm2.jpg" alt="">
+                <img src="../images/alqdorm2.jpg" alt=""> <!--La idea a futuro es hacer un carrousel con distintas imagenes-->
                 <div class="datos">
                     <div class="precio">
                         <h4>$150.000</h4>
@@ -84,7 +84,7 @@
                 </div>
             </div>
             <div class="casilla">
-                <img src="../images/alqdorm3.jpg" alt="">
+                <img src="../images/alqdorm3.jpg" alt=""> <!--La idea a futuro es hacer un carrousel con distintas imagenes-->
                 <div class="datos">
                     <div class="precio">
                         <h4>$130.000</h4>
@@ -104,7 +104,7 @@
                 </div>
             </div>
             <div class="casilla">
-                <img src="../images/alqdorm4.jpg" alt="">
+                <img src="../images/alqdorm4.jpg" alt=""> <!--La idea a futuro es hacer un carrousel con distintas imagenes-->
                 <div class="datos">
                     <div class="precio">
                         <h4>$175.000</h4>
