--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
 
         <!-- CSS -->
         <link rel="stylesheet" href="css/maincss.css">
+        <!--jQuery-->
+        <script src="jquery-3.7.1.min.js"></script>
     </head>
 
     <body>
@@ -59,8 +61,8 @@
             <div class="conteiner">
                 <div class="indexCol2">
                     <img class="imgindex2" src="images/index3.jpg" alt="">
-                    <img class="imgindex2" src="images/index5.jpg" alt="">
-                    <img class="imgindex2" src="images/index2.jpg" alt="">
+                    <img class="imgindex3" src="images/index5.jpg" alt="">
+                    <img class="imgindex4" src="images/index2.jpg" alt="">
                 </div>
                 
                 <div class="pIndexCol2">
@@ -78,5 +80,6 @@
                 <h3>Tienes alguna duda? No dudes es escribirnos!</h3>
             </a>
         </footer>
+        <script src="./index.js"></script>
     </body>
 </html>
