--- a/pages/alquilar.html
+++ b/pages/alquilar.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+DOCTYPE html>
 <html lang="es">
 <html>
     <head>
@@ -22,6 +22,8 @@
 
         <!-- CSS -->
         <link rel="stylesheet" href="../css/maincss.css">
+        <!-- JQUERY -->
+        <script src="../jquery-3.7.1.min.js"></script>
     </head>
 
     <body>
@@ -44,7 +46,7 @@
         <main>
 
             <div class="casilla">
-                <img src="../images/alqdorm1.jpg" alt=""> <!--La idea a futuro es hacer un carrousel con distintas imagenes-->
+                <img class="imgalquiler1" src="../images/alqdorm1.jpg" alt=""> <!--La idea a futuro es hacer un carrousel con distintas imagenes-->
                 <div class="datos">
                     <div class="precio">
                         <h4>$100.000</h4>
@@ -60,11 +62,11 @@
                         <a href="https://www.whatsapp.com/"><img src="../images/whatsappLogo.png" alt=""></a>
                         <a href=""><img src="../images/telefonoLogo.png" alt=""></a>
                         <a href="https://www.google.com/intl/es-419/gmail/about/"><img src="../images/mensajeLogo.png" alt=""></a>
-                    </div>
+                    </div> 
                 </div>
             </div>
             <div class="casilla">
-                <img src="../images/alqdorm2.jpg" alt=""> <!--La idea a futuro es hacer un carrousel con distintas imagenes-->
+                <img class="imgalquiler2" src="../images/alqdorm2.jpg" alt=""> <!--La idea a futuro es hacer un carrousel con distintas imagenes-->
                 <div class="datos">
                     <div class="precio">
                         <h4>$150.000</h4>
@@ -84,7 +86,7 @@
                 </div>
             </div>
             <div class="casilla">
-                <img src="../images/alqdorm3.jpg" alt=""> <!--La idea a futuro es hacer un carrousel con distintas imagenes-->
+                <img class="imgalquiler3" src="../images/alqdorm3.jpg" alt=""> <!--La idea a futuro es hacer un carrousel con distintas imagenes-->
                 <div class="datos">
                     <div class="precio">
                         <h4>$130.000</h4>
@@ -104,7 +106,7 @@
                 </div>
             </div>
             <div class="casilla">
-                <img src="../images/alqdorm4.jpg" alt=""> <!--La idea a futuro es hacer un carrousel con distintas imagenes-->
+                <img class="imgalquiler4" src="../images/alqdorm4.jpg" alt=""> <!--La idea a futuro es hacer un carrousel con distintas imagenes-->
                 <div class="datos">
                     <div class="precio">
                         <h4>$175.000</h4>
@@ -132,5 +134,6 @@
                 <h3>Tienes alguna duda? No dudes es escribirnos!</h3>
             </a>
         </footer>
+        <script src="../index.js"></script>
     </body>
 </html>
