--- a/pages/quienesSomos.html
+++ b/pages/quienesSomos.html
@@ -8,7 +8,7 @@
 
         <meta name="keywords" content="">
         <meta name="description" content="">
-        <title>Comprar</title>
+        <title>Quienes Somos</title>
 
         <link rel="shortcut icon" href="../images/logot.png" type="image/x-icon">
 
@@ -22,6 +22,8 @@
 
         <!-- CSS -->
         <link rel="stylesheet" href="../css/maincss.css">
+        <!--jQuery-->
+        <script src="../jquery-3.7.1.min.js"></script>
     </head>
 
     <body>
@@ -68,5 +70,6 @@
                 <h3>Tienes alguna duda? No dudes es escribirnos!</h3>
             </a>
         </footer>
+        <script src="../index.js"></script>
     </body>
 </html>
